Modelo de Vizinhaça K-NN

--- a/Mini Weka.ipynb
+++ b/Mini Weka.ipynb
@@ -707,6 +707,51 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Classe para Modelos com base Gausiana"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.preprocessing import LabelEncoder\n",
+    "class GaussianBase(object):\n",
+    "    def __init__(self):\n",
+    "        self.n_feature = None\n",
+    "        \n",
+    "    def check_X_y(self, X, y=None, reset=False):\n",
+    "        n_samples, n_feature = X.shape\n",
+    "        \n",
+    "        if(y is not None and n_samples != len(y)):  raise Exception('Numero diferente de dados e rótulos das amotras')\n",
+    "        if(reset):\n",
+    "            self.n_feature = n_feature\n",
+    "            self.feature_label_encoder = [None for i in range(n_feature)]\n",
+    "        if(self.n_feature is None): raise Exception('Tente treinar o modelo primeiro')\n",
+    "        elif(self.n_feature != n_feature): raise Exception(f'Número de atributos difere do cedido anteriomente: {n_feature} ao invés de {self.n_feature}')\n",
+    "        \n",
+    "        feature_label_encoder = self.feature_label_encoder\n",
+    "        for i in range(n_feature):\n",
+    "            try:\n",
+    "                float(X[0,i])\n",
+    "            except:\n",
+    "                if(feature_label_encoder[i]==None):\n",
+    "                    feature_label_encoder[i] = LabelEncoder()\n",
+    "                    feature_label_encoder[i].fit(X[:, i])\n",
+    "                X[:, i] = feature_label_encoder[i].transform(X[:,i])\n",
+    "                \n",
+    "        self.n_samples = n_samples\n",
+    "        self.n_feature = n_feature\n",
+    "        self.feature_label_encoder = feature_label_encoder\n",
+    "                \n",
+    "        return X,y"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "##  Modelo probabilístico Naive Bayes<a name=\"modelo-probabilístico-naive-bayes\"></a>\n",
     "\n",
     "O Naive Bayes é um classificador probabilístico simples baseado no teorema de Bayes. O teorema de Bayes descreve a probabilidade de um evento, com base no conhecimento prévio de condições que podem estar relacionadas ao evento. Por exemplo, se o alzheimer está relacionado à idade, então, usando o teorema de Bayes, a idade de uma pessoa pode ser usada para avaliar com mais precisão a probabilidade de alzheimer, comparada com a avaliação da probabilidade sem conhecimento da idade da pessoa.\n",
@@ -756,13 +801,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.preprocessing import LabelEncoder\n",
     "import math\n",
     "\n",
-    "class NaiveBayes(object):\n",
+    "class NaiveBayes(GaussianBase):\n",
     "    \n",
     "    def __init__(self):\n",
-    "        self.n_feature = None\n",
+    "        super().__init__()\n",
     "    \n",
     "    def calculate_probability(self, x, mean, stdev):\n",
     "        return (1 / (math.sqrt(2*math.pi) * stdev)) * math.exp(-(math.pow(x-mean,2)/(2*math.pow(stdev,2))))\n",
@@ -783,32 +827,6 @@
     "    def summarize(self, instances):\n",
     "        return [ (np.mean(instances[:,i]), np.std(instances[:,i])) for i in range(self.n_feature)]\n",
     "        \n",
-    "    def check_X_y(self, X, y=None, reset=False):\n",
-    "        n_samples, n_feature = X.shape\n",
-    "        \n",
-    "        if(y is not None and n_samples != len(y)):  raise Exception('Numero diferente de dados e rótulos das amotras')\n",
-    "        if(reset):\n",
-    "            self.n_feature = n_feature\n",
-    "            self.feature_label_encoder = [None for i in range(n_feature)]\n",
-    "        if(self.n_feature is None): raise Exception('Tente treinar o modelo primeiro')\n",
-    "        elif(self.n_feature != n_feature): raise Exception(f'Número de atributos difere do cedido anteriomente: {n_feature} ao invés de {self.n_feature}')\n",
-    "        \n",
-    "        feature_label_encoder = self.feature_label_encoder\n",
-    "        for i in range(n_feature):\n",
-    "            try:\n",
-    "                float(X[0,i])\n",
-    "            except:\n",
-    "                if(feature_label_encoder[i]==None):\n",
-    "                    feature_label_encoder[i] = LabelEncoder()\n",
-    "                    feature_label_encoder[i].fit(X[:, i])\n",
-    "                X[:, i] = feature_label_encoder[i].transform(X[:,i])\n",
-    "                \n",
-    "        self.n_samples = n_samples\n",
-    "        self.n_feature = n_feature\n",
-    "        self.feature_label_encoder = feature_label_encoder\n",
-    "                \n",
-    "        return X,y\n",
-    "            \n",
     "    def fit(self, X, y):\n",
     "        \n",
     "        X,y = self.check_X_y(X,y, reset=True)\n",
@@ -831,7 +849,7 @@
     "    \n",
     "    def predict(self, X):\n",
     "        X,_ = self.check_X_y(X)\n",
-    "        return [ self._predict(sample) for sample in X]"
+    "        return [ self._predict(sample) for sample in X]\n"
    ]
   },
   {
@@ -1148,6 +1166,66 @@
     "        \n",
     "        #Caso um exemplo não se enquadre em nenhuma regra, será classificado como parte da classe com mais exemplos\n",
     "        return self.default\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Vizinhaça <a name=\"vizinhaça\"></a>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "from operator import itemgetter\n",
+    "from collections import Counter\n",
+    "\n",
+    "class KnnClassifier(GaussianBase):\n",
+    "    def __init__(self, n_neighbors=5, distance=\"euclideana\"):\n",
+    "        super().__init__()\n",
+    "        distances = {\"euclideana\":self.__euclideana, \"manhattan\":self.__manhattan, \"chebyshev\":self.__chebyshev}\n",
+    "        \n",
+    "        self.n_neighbors = n_neighbors\n",
+    "        self.__distance = distances[distance]\n",
+    "        self.__distances = distances\n",
+    "    \n",
+    "    def __euclideana(self, x, y):\n",
+    "        return sum((x - y)**2)**0.5\n",
+    "    \n",
+    "    def __manhattan(self, x, y):\n",
+    "        return sum(abs(x - y))\n",
+    "    \n",
+    "    def __chebyshev(self, x, y):\n",
+    "        return max(abs(x - y))\n",
+    "    \n",
+    "    def fit(self, X, y):\n",
+    "        X,y = self.check_X_y(X,y, reset=True)\n",
+    "        self.X, self.y = X,y\n",
+    "    \n",
+    "    def _predict(self, sample):\n",
+    "        neighbors_distances = list(map(lambda X,y: (self.__distance(sample,X),y), self.X, self.y))\n",
+    "        neighbors_distances.sort(key=itemgetter(0))\n",
+    "        neighbors_distances.append((np.Inf,-1))\n",
+    "        \n",
+    "        k_neighbors = []\n",
+    "        for i in range(len(neighbors_distances)):\n",
+    "            k_neighbors.append(neighbors_distances[i][1])\n",
+    "            if len(k_neighbors) >= self.n_neighbors and neighbors_distances[i][0] != neighbors_distances[i+1][0]:\n",
+    "                break\n",
+    "        \n",
+    "        mode_neighbors_end = Counter(k_neighbors[(self.n_neighbors-1):]).most_common(1)[0][0]\n",
+    "        mode_neighbors = Counter(k_neighbors[:(self.n_neighbors-1)] + [mode_neighbors_end]).most_common(1)[0][0]\n",
+    "        \n",
+    "        return mode_neighbors\n",
+    "\n",
+    "    def predict(self, X):\n",
+    "        X,_ = self.check_X_y(X)\n",
+    "        return [ self._predict(sample) for sample in X]\n"
    ]
   }
  ],
