Modelo de Vizinhaça K-NN

--- a/Mini Weka.ipynb
+++ b/Mini Weka.ipynb
@@ -44,7 +44,7 @@
     "- [Modelo probabilístico Naive Bayes](#modelo-probabilístico-naive-bayes);\n",
     "- [Árvores de decisão](#árvores-de-decisão);\n",
     "- [Regras](#regras);\n",
-    "- [Vizinhança](#vizinhaça);\n",
+    "- [Modelo de Vizinhaça K-Nearest Neighbor](#vizinhaça);\n",
     "- [Máquinas de vetores de suporte](#máquinas-de-vetores-de-suporte);\n",
     "\n",
     "## Base de dados\n",
@@ -1172,7 +1172,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Vizinhaça <a name=\"vizinhaça\"></a>"
+    "## Modelo de Vizinhaça K-Nearest Neighbor<a name=\"vizinhaça\"></a>"
    ]
   },
   {
