Modelo de Vizinhaça K-NN

--- a/Mini Weka.ipynb
+++ b/Mini Weka.ipynb
@@ -45,7 +45,6 @@
     "- [Árvores de decisão](#árvores-de-decisão);\n",
     "- [Regras](#regras);\n",
     "- [Modelo de Vizinhaça K-Nearest Neighbor](#vizinhaça);\n",
-    "- [Máquinas de vetores de suporte](#máquinas-de-vetores-de-suporte);\n",
     "\n",
     "## Base de dados\n",
     "Para testar e validar nossos modelos, usaremos duas bases de dados, a primeira com atributos numéricos e a segunda com atributos nominais. Ambas as bases terão duas versões, uma completa e a segunda com alguns atributos com valores faltando, para que possam ser tratados no preprocessamento e simular melhor dados brutos encontrados no mundo real.\n",
@@ -707,7 +706,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Classe para Modelos com base Gausiana"
+    "## Classe Base para Modelos com distribuição Gausiana"
    ]
   },
   {
