Melhorando o Markdown e alterando estrutura de apresentação do notebook

--- a/Mini Weka.ipynb
+++ b/Mini Weka.ipynb
@@ -869,7 +869,44 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Modelo de Vizinhaça K-Nearest Neighbor<a name=\"vizinhaça\"></a>"
+    "## Modelo de Vizinhaça K-Nearest Neighbor<a name=\"vizinhaça\"></a>\n",
+    "\n",
+    "A intuição por trás do K-Nearest Neighbor (KNN) é um dos mais simples de todos os algoritmos de aprendizado de máquina supervisionados. Ele simplesmente calcula a distância de um novo exemplo a todas as amostras de treinamento. A distância pode ser de qualquer tipo, por exemplo, Euclidean ou Manhattan etc. Em seguida, seleciona as K amostras mais próximas, em que K pode ser qualquer número inteiro. Finalmente, ele atribui o exemplo à classe à qual a maioria das K amostras pertence.\n",
+    "\n",
+    "<br>\n",
+    "<div style=\"text-align:center\">\n",
+    "    <img style=\"width:20%;\n",
+    "                height: auto\"\n",
+    "         src=\"./knn3.png\" />\n",
+    "</div>\n",
+    "\n",
+    "### Euclidian\n",
+    "\n",
+    "A distância euclidiana é a distância entre dois pontos, que pode ser provada pela aplicação repetida do teorema de Pitágoras\n",
+    "\n",
+    "$$\n",
+    "D_{\\rm {Euclidiana}}(x,y) = \\sqrt {\\sum _{i=1}^{n}(x_{i}-y_{i})^{2}}\n",
+    "$$\n",
+    "\n",
+    "### Manhattan\n",
+    "\n",
+    "De uma maneira mais formal, podemos definir a distância de Manhattan entre dois pontos num espaço euclidiano com um sistema cartesiano de coordenadas fixo como a soma dos comprimentos da projecção da linha que une os pontos com os eixos das coordenadas.\n",
+    "\n",
+    "$$\n",
+    "D_{\\rm {Manhattan}}(x,y) = \\sum _{i=1}^{n}|x_{i}-y_{i}|\n",
+    "$$\n",
+    "\n",
+    "### Chebyshev\n",
+    "\n",
+    "Distância Chebyshev é uma métrica definida em um espaço vetorial onde a distância entre dois vetores é a maior de suas diferenças ao longo de qualquer dimensão de coordenada.\n",
+    "\n",
+    "$$\n",
+    "D_{\\rm {Chebyshev}}(x,y) = \\max _{i}(|x_{i}-y_{i}|)\n",
+    "$$\n",
+    "\n",
+    "A partir deste ponto, seguimos os dois passos abaixo:\n",
+    "- Treinamento: apenas guardar um grupo de amostras que servirão de referencia\n",
+    "- Classificação de um novo exemplo: calcular a classe mais frequente dos k vizinhos mais proximos"
    ]
   },
   {
