Melhorando o Markdown, alterando estrutura de apresentação do notebook e adcionando dataset

--- a/Mini Weka.ipynb
+++ b/Mini Weka.ipynb
@@ -94,7 +94,7 @@
     }
    ],
    "source": [
-    "data, info = loadarff('../data/iris.arff')\n",
+    "data, info = loadarff('./data/iris.arff')\n",
     "data = pd.DataFrame(data)\n",
     "info"
    ]
@@ -531,7 +531,7 @@
     "<div style=\"text-align:center\">\n",
     "    <img style=\"width:40%;\n",
     "                height: auto\"\n",
-    "         src=\"./decision_tree.png\" />\n",
+    "         src=\"./img/decision_tree.png\" />\n",
     "</div>\n",
     "\n",
     "A ideia geral de métodos baseados em árvores é particionar o espaço recursivamente em retângulos (sub-regiões), nos quais um modelo simples é aprendido.\n",
@@ -877,7 +877,7 @@
     "<div style=\"text-align:center\">\n",
     "    <img style=\"width:20%;\n",
     "                height: auto\"\n",
-    "         src=\"./knn3.png\" />\n",
+    "         src=\"./img/knn3.png\" />\n",
     "</div>\n",
     "\n",
     "### Euclidian\n",
@@ -975,7 +975,7 @@
     "<div style=\"text-align:center\">\n",
     "    <img style=\"width:40%;\n",
     "                height: auto\"\n",
-    "         src=\"./stratified_kfold.png\" />\n",
+    "         src=\"./img/stratified_kfold.png\" />\n",
     "</div>\n",
     "\n",
     "Ao final das 10 iterações calcula-se a acurácia sobre os erros encontrados obtendo assim uma medida mais confiável sobre a capacidade do modelo de representar o processo gerador dos dados. A precisão final do modelo estimado, aqui, será obtido por 3 metricas (precisão, revocação e F1) e uma matrix de confusão.\n",
@@ -1111,7 +1111,7 @@
     }
    ],
    "source": [
-    "data, info = loadarff('../data/weather.arff')\n",
+    "data, info = loadarff('./data/weather.arff')\n",
     "data = pd.DataFrame(data)\n",
     "info"
    ]
