--- a/Mini Weka.ipynb
+++ b/Mini Weka.ipynb
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,234 +74,119 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dataset: iris\n",
+      "\tsepallength's type is numeric\n",
+      "\tsepalwidth's type is numeric\n",
+      "\tpetallength's type is numeric\n",
+      "\tpetalwidth's type is numeric\n",
+      "\tclass's type is nominal, range is ('setosa', 'versicolor', 'virginica')\n",
+      "\n"
+     ]
+    },
+    {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>sepallength</th>\n",
+       "      <th>sepalwidth</th>\n",
+       "      <th>petallength</th>\n",
+       "      <th>petalwidth</th>\n",
+       "      <th>class</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>31</th>\n",
+       "      <td>5.4</td>\n",
+       "      <td>3.4</td>\n",
+       "      <td>1.5</td>\n",
+       "      <td>0.4</td>\n",
+       "      <td>setosa</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50</th>\n",
+       "      <td>7.0</td>\n",
+       "      <td>3.2</td>\n",
+       "      <td>4.7</td>\n",
+       "      <td>1.4</td>\n",
+       "      <td>versicolor</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>42</th>\n",
+       "      <td>4.4</td>\n",
+       "      <td>3.2</td>\n",
+       "      <td>1.3</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>setosa</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30</th>\n",
+       "      <td>4.8</td>\n",
+       "      <td>3.1</td>\n",
+       "      <td>1.6</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>setosa</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>83</th>\n",
+       "      <td>6.0</td>\n",
+       "      <td>2.7</td>\n",
+       "      <td>5.1</td>\n",
+       "      <td>1.6</td>\n",
+       "      <td>versicolor</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "Dataset: iris\n",
-       "\tsepallength's type is numeric\n",
-       "\tsepalwidth's type is numeric\n",
-       "\tpetallength's type is numeric\n",
-       "\tpetalwidth's type is numeric\n",
-       "\tclass's type is nominal, range is ('Iris-setosa', 'Iris-versicolor', 'Iris-virginica')"
+       "    sepallength  sepalwidth  petallength  petalwidth       class\n",
+       "31          5.4         3.4          1.5         0.4      setosa\n",
+       "50          7.0         3.2          4.7         1.4  versicolor\n",
+       "42          4.4         3.2          1.3         0.2      setosa\n",
+       "30          4.8         3.1          1.6         0.2      setosa\n",
+       "83          6.0         2.7          5.1         1.6  versicolor"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "data, info = loadarff('./data/iris.arff')\n",
-    "data = pd.DataFrame(data)\n",
-    "info"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>sepallength</th>\n",
-       "      <th>sepalwidth</th>\n",
-       "      <th>petallength</th>\n",
-       "      <th>petalwidth</th>\n",
-       "      <th>class</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>122</th>\n",
-       "      <td>7.7</td>\n",
-       "      <td>2.8</td>\n",
-       "      <td>6.7</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>b'Iris-virginica'</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>94</th>\n",
-       "      <td>5.6</td>\n",
-       "      <td>2.7</td>\n",
-       "      <td>4.2</td>\n",
-       "      <td>1.3</td>\n",
-       "      <td>b'Iris-versicolor'</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>143</th>\n",
-       "      <td>6.8</td>\n",
-       "      <td>3.2</td>\n",
-       "      <td>5.9</td>\n",
-       "      <td>2.3</td>\n",
-       "      <td>b'Iris-virginica'</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>4.9</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>1.4</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>b'Iris-setosa'</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>125</th>\n",
-       "      <td>7.2</td>\n",
-       "      <td>3.2</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>1.8</td>\n",
-       "      <td>b'Iris-virginica'</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "     sepallength  sepalwidth  petallength  petalwidth               class\n",
-       "122          7.7         2.8          6.7         2.0   b'Iris-virginica'\n",
-       "94           5.6         2.7          4.2         1.3  b'Iris-versicolor'\n",
-       "143          6.8         3.2          5.9         2.3   b'Iris-virginica'\n",
-       "1            4.9         3.0          1.4         0.2      b'Iris-setosa'\n",
-       "125          7.2         3.2          6.0         1.8   b'Iris-virginica'"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "data.sample(5)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Na leitura do arquivo ARFF, os valores nominais das espécies acabaram por ser convertido no tipo Byte, para facilitar nosso trabalho vamos converter novamente para o tipo String"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>sepallength</th>\n",
-       "      <th>sepalwidth</th>\n",
-       "      <th>petallength</th>\n",
-       "      <th>petalwidth</th>\n",
-       "      <th>class</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>77</th>\n",
-       "      <td>6.7</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>1.7</td>\n",
-       "      <td>Iris-versicolor</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>67</th>\n",
-       "      <td>5.8</td>\n",
-       "      <td>2.7</td>\n",
-       "      <td>4.1</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>Iris-versicolor</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>58</th>\n",
-       "      <td>6.6</td>\n",
-       "      <td>2.9</td>\n",
-       "      <td>4.6</td>\n",
-       "      <td>1.3</td>\n",
-       "      <td>Iris-versicolor</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>132</th>\n",
-       "      <td>6.4</td>\n",
-       "      <td>2.8</td>\n",
-       "      <td>5.6</td>\n",
-       "      <td>2.2</td>\n",
-       "      <td>Iris-virginica</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>90</th>\n",
-       "      <td>5.5</td>\n",
-       "      <td>2.6</td>\n",
-       "      <td>4.4</td>\n",
-       "      <td>1.2</td>\n",
-       "      <td>Iris-versicolor</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "     sepallength  sepalwidth  petallength  petalwidth            class\n",
-       "77           6.7         3.0          5.0         1.7  Iris-versicolor\n",
-       "67           5.8         2.7          4.1         1.0  Iris-versicolor\n",
-       "58           6.6         2.9          4.6         1.3  Iris-versicolor\n",
-       "132          6.4         2.8          5.6         2.2   Iris-virginica\n",
-       "90           5.5         2.6          4.4         1.2  Iris-versicolor"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "data['class'] = data['class'].apply(lambda specie: specie.decode(\"utf-8\"))\n",
+    "data = (pd.DataFrame(data)).apply(lambda x: x.apply(lambda s: s.decode(\"utf-8\")) if type(x[0])==bytes else x)\n",
+    "print(info)\n",
     "data.sample(5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -319,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1076,255 +961,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Weather dataset\n",
-    "Este banco consiste em condições atmosféricas necessárias para se confirmar uma partida de um jogo. O conjunto de dados contém 2 classes com 5 'no's e 9 'yes's, ao que se refere jogar naquelas condições"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Dataset: weather\n",
-       "\toutlook's type is nominal, range is ('sunny', 'overcast', 'rainy')\n",
-       "\ttemperature's type is numeric\n",
-       "\thumidity's type is numeric\n",
-       "\twindy's type is nominal, range is ('TRUE', 'FALSE')\n",
-       "\tplay's type is nominal, range is ('yes', 'no')"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "data, info = loadarff('./data/weather.arff')\n",
-    "data = pd.DataFrame(data)\n",
-    "info"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>outlook</th>\n",
-       "      <th>temperature</th>\n",
-       "      <th>humidity</th>\n",
-       "      <th>windy</th>\n",
-       "      <th>play</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>b'rainy'</td>\n",
-       "      <td>75.0</td>\n",
-       "      <td>80.0</td>\n",
-       "      <td>b'FALSE'</td>\n",
-       "      <td>b'yes'</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>b'overcast'</td>\n",
-       "      <td>81.0</td>\n",
-       "      <td>75.0</td>\n",
-       "      <td>b'FALSE'</td>\n",
-       "      <td>b'yes'</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>b'rainy'</td>\n",
-       "      <td>71.0</td>\n",
-       "      <td>91.0</td>\n",
-       "      <td>b'TRUE'</td>\n",
-       "      <td>b'no'</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>b'sunny'</td>\n",
-       "      <td>72.0</td>\n",
-       "      <td>95.0</td>\n",
-       "      <td>b'FALSE'</td>\n",
-       "      <td>b'no'</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>b'overcast'</td>\n",
-       "      <td>64.0</td>\n",
-       "      <td>65.0</td>\n",
-       "      <td>b'TRUE'</td>\n",
-       "      <td>b'yes'</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "        outlook  temperature  humidity     windy    play\n",
-       "9      b'rainy'         75.0      80.0  b'FALSE'  b'yes'\n",
-       "12  b'overcast'         81.0      75.0  b'FALSE'  b'yes'\n",
-       "13     b'rainy'         71.0      91.0   b'TRUE'   b'no'\n",
-       "7      b'sunny'         72.0      95.0  b'FALSE'   b'no'\n",
-       "6   b'overcast'         64.0      65.0   b'TRUE'  b'yes'"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "data.sample(5)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Neste conjunto, todos os valores nominais estão em bytes, faremos a conversão agora"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>outlook</th>\n",
-       "      <th>temperature</th>\n",
-       "      <th>humidity</th>\n",
-       "      <th>windy</th>\n",
-       "      <th>play</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>overcast</td>\n",
-       "      <td>64.0</td>\n",
-       "      <td>65.0</td>\n",
-       "      <td>True</td>\n",
-       "      <td>yes</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>sunny</td>\n",
-       "      <td>72.0</td>\n",
-       "      <td>95.0</td>\n",
-       "      <td>False</td>\n",
-       "      <td>no</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>sunny</td>\n",
-       "      <td>85.0</td>\n",
-       "      <td>85.0</td>\n",
-       "      <td>False</td>\n",
-       "      <td>no</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>rainy</td>\n",
-       "      <td>70.0</td>\n",
-       "      <td>96.0</td>\n",
-       "      <td>False</td>\n",
-       "      <td>yes</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>rainy</td>\n",
-       "      <td>68.0</td>\n",
-       "      <td>80.0</td>\n",
-       "      <td>False</td>\n",
-       "      <td>yes</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "    outlook  temperature  humidity  windy play\n",
-       "6  overcast         64.0      65.0   True  yes\n",
-       "7     sunny         72.0      95.0  False   no\n",
-       "0     sunny         85.0      85.0  False   no\n",
-       "3     rainy         70.0      96.0  False  yes\n",
-       "4     rainy         68.0      80.0  False  yes"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "data['outlook'] = data['outlook'].apply(lambda outlook: outlook.decode(\"utf-8\"))\n",
-    "data['windy'] = data['windy'].apply(lambda windy: True if windy.decode(\"utf-8\")=='TRUE' else False)\n",
-    "data['play'] = data['play'].apply(lambda play: play.decode(\"utf-8\"))\n",
-    "data.sample(5)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [],
    "source": [
-    "weather = data"
+    "from sklearn.metrics import confusion_matrix\n",
+    "from sklearn.utils.multiclass import unique_labels\n",
+    "\n",
+    "def plot_confusion_matrix(y_true, y_pred):\n",
+    "    \n",
+    "    classes = unique_labels(y_true, y_pred)\n",
+    "    \n",
+    "    cm = confusion_matrix(y_true, y_pred)\n",
+    "    cm_normalize = cm.astype('float') / cm.sum(axis=1)[:, np.newaxis]\n",
+    "    \n",
+    "    fig = plt.figure(figsize=(14,5))\n",
+    "    ax1 = fig.add_subplot(121)\n",
+    "    ax2 = fig.add_subplot(122)\n",
+    "    \n",
+    "    data = [(pd.DataFrame(cm_, index=classes, columns=classes), title, ax) for cm_, title,ax in (\n",
+    "        (cm,'Confusion matrix, without normalization', ax1), \n",
+    "        (cm_normalize, 'Normalized confusion matrix', ax2)\n",
+    "    )]\n",
+    "\n",
+    "    sns.set(font_scale=1.4)\n",
+    "    for df, title, ax in data:\n",
+    "        sns.heatmap(df, annot=True,annot_kws={\"size\": 14}, ax=ax).set_title(title)\n",
+    "\n"
    ]
   },
   {
